# issue-double-free-static-lib

./: CMakeLists.txt  README.md  bar.cpp  bar_nofoo.cpp  baz.cpp  foo.cpp  foo.h
